[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs_temporalfix"
version = "2.0.0"
description = "Add Temporal Coherence to Single Image AI Upscaling Models in Vapoursynth"
authors = [{ name = "pifroggi" }]
license = { text = "Apache-2.0" }

dependencies = [
    "torch",
    "numpy"
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
vs_temporalfix = ["models/*.pth", "models/*.onnx"]

[project.urls]
Home-page = "https://github.com/pifroggi/vs_temporalfix"
Repository = "https://github.com/pifroggi/vs_temporalfix"
